--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.0
+  dio:
 dev_dependencies:
   flutter_test:
     sdk: flutter
